--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-head>
-
+<head>
+    <meta charset="UTF-8">
 </head>
+
 <body>
 <script src="script.js"> </script>
 </body>
+
 </html>
